--- a/styles/main.css
+++ b/styles/main.css
@@ -71,11 +71,13 @@ a {
 }
 
 .trans-left {
+  left: 0;
   -webkit-animation: moveWaveLeft linear infinite;
           animation: moveWaveLeft linear infinite;
 }
 
 .trans-right {
+  right: 0;
   -webkit-animation: moveWaveRight linear infinite;
           animation: moveWaveRight linear infinite;
 }
@@ -170,23 +172,23 @@ a {
 
 @-webkit-keyframes moveWaveRight {
   0% {
-    -webkit-transform: translateX(-50%);
-            transform: translateX(-50%);
-  }
-  100% {
     -webkit-transform: translateX(0);
             transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(50%);
+            transform: translateX(50%);
   }
 }
 
 @keyframes moveWaveRight {
   0% {
-    -webkit-transform: translateX(-50%);
-            transform: translateX(-50%);
-  }
-  100% {
     -webkit-transform: translateX(0);
             transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(50%);
+            transform: translateX(50%);
   }
 }
 
